# water-potability-prediction

./: Dockerfile  README.md  README_hf.md  main.py  pyproject.toml  requirements.txt
notebooks/: notebook.ipynb
src/scripts/: predict.py  serve.py  train.py
templates/: index.html
tests/: test.py
